--- a/src/components/books.scss
+++ b/src/components/books.scss
@@ -10,4 +10,21 @@ $tetiary-variant: #fff;
     background-color: $tetiary-color;
     padding: 50px 50px 0 50px;
   }
+
+  .line-div {
+    background-color: $tetiary-color;
+  }
+
+  .hr {
+    background-color: $secondary-color;
+    height: 2px;
+    width: 92%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .add-books {
+    background-color: $tetiary-color;
+    padding: 30px 50px;
+  }
 }
