--- a/src/components/books.scss
+++ b/src/components/books.scss
@@ -1,13 +1,13 @@
 $primary-color: #266dd3;
 $secondary-color: #0a0b09;
-$tetiary-color: #e4e4e4;
+$tetiary-color: #eff1ed;
 $tetiary-mid: #bdbdbd;
 $tetiary-variant: #fff;
 
 .container {
   .book-details {
     min-height: 350px;
-    background-color: $tetiary-color;
+    background-color: #eff1ed;
     padding: 50px 50px 0 50px;
   }
 
