--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -9,6 +9,7 @@ $tetiary-variant: #fff;
 nav {
   box-shadow: 0 0 2px $tetiary-mid;
   height: 80px;
+  background-color: #fff;
 
   .navbar-brand {
     font-family: 'Montserrat', sans-serif;
